test/errors/scopes5.input.asm
* = $801

!macro m() {
    lda #0
}
    lda #m   ; should be an error
